--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-router-dom": "^6.4.0",
     "react-scripts": "5.0.1",
     "reactstrap": "^9.1.4",
+    "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4",
     "webfontloader": "^1.6.28"
   },
